--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  font-family: verdana, arial, sans-serif;
 }
 
 *, *:before, *:after {
@@ -15,6 +16,8 @@ body {
   margin: 1rem;
   font-family: sans-serif;
   line-height: 1.5;
+  background-color: slategrey;
+  color:white;
 }
 
 /* images and videos max out at full width */
