🎎🚒 Checkpoint ./style.css:43427363/186

--- a/style.css
+++ b/style.css
@@ -15,11 +15,16 @@ body {
   margin: 2rem;
   font-family: helvetica, arial, sans-serif;
   background-color: maroon;
-  color:white;
+  color: white;
 }
 
-h1{
-  font-family: verdana, arial, sans-sherif;
+h1 {
+  font-family: verdana, arial, sans-serif;
+}
+
+button {
+  padding:10px;
+  border-radius: 10px;
 }
 
 /* images and videos max out at full width */
