🎖🏉 Checkpoint ./style.css:43427363/75 ./index.html:43427363/108

--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ button {
   border-radius: 10px;
 }
 
+#gameButtonArea > button {
+  width:200px;
+  height:200px;
+  margin:2px;
+}
+
 /* images and videos max out at full width */
 img,
 video {
