--- a/style.css
+++ b/style.css
@@ -33,7 +33,32 @@ button {
   margin:2px;
 }
 .hidden {
-  dis
+  display: none;
+}
+#button1 {
+  background: lightgreen;
+}
+#button2 {
+  background: lightblue;
+}
+#button3 {
+  background: lightpink;
+}
+#button4 {
+  background: lightyellow;
+}
+
+#button1:active {
+  background: green;
+}
+#button2:active {
+  background: blue;
+}
+#button3:active {
+  background: red;
+}
+#button4:active {
+  background: yellow;
 }
 
 /* images and videos max out at full width */
