⛈🛢 Checkpoint ./script.js:43427363/18 ./index.html:43427363/108 ./style.css:43427363/181

--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ button {
 #button4 {
   background: lightyellow;
 }
+#button5 {
+  background: purple;
+}
 
 #button1:active, #button1.lit {
   background: green;
@@ -59,6 +62,9 @@ button {
 }
 #button4:active, #button4.lit {
   background: yellow;
+}
+#button5:active, #button5.lit {
+  background: purple;
 }
 
 /* images and videos max out at full width */
