🚇😜 Checkpoint ./index.html:43427363/549 ./script.js:43427363/264 ./style.css:43427363/10

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ button {
 
 #button1:active, #button1.lit {
   background: green;
+  onclick
 }
 #button2:active, #button2.lit {
   background: blue;
